istio-kube-features/kube_keycloak.yml
##################################################################################################
# Keycloak
##################################################################################################
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    name: keycloak
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      namespace: keycloak
      name: keycloak
      labels:
        app: keycloak
        name: keycloak
    spec:
      containers:
      - name: keycoak
        image: jboss/keycloak:latest
        imagePullPolicy: Never
        volumeMounts:
          - mountPath: /keycloak
            name: keycloak-volume
        ports:
          - containerPort: 8080
            protocol: TCP
      volumes:
        - name: keycloak-volume
          hostPath:
            path: /Users/hardikpatel/workbench/projects/cit/service-mesh/istio-kube-features/keycloak
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    name: keycloak
spec:
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30090
  selector:
    name: keycloak
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ExternalName
  externalName: keycloak.keycloak.svc.cluster.local
