istio-kube-features/kube_locust.yaml
#################################################################################################
# Locust
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: locust
  labels:
    app: locust
spec:
  ports:
    - port: 8089
      targetPort: locust
      protocol: TCP
      name: locust
  selector:
    app: locust
  type: LoadBalancer
----
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: locust-master
  labels:
    name: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust-master
  template:
    metadata:
      labels:
        app: locust-master
    spec:
      containers:
        - name: locust-master
          image: cithub/locust:latest
          imagePullPolicy: Never
          ports:
            - name: locust
              containerPort: 8089
              protocol: TCP
